make sure code lines don't wrap

--- a/components/markdown.scss
+++ b/components/markdown.scss
@@ -349,6 +349,7 @@ $margin: 16px;
     padding: 0;
     margin: 0;
     font-size: 100%;
+    word-break: normal;
     white-space: pre;
     background: transparent;
     border: 0;
@@ -364,6 +365,7 @@ $margin: 16px;
     overflow: auto;
     font-size: 85%;
     line-height: 1.45;
+    word-break: normal;
     background-color: #f7f7f7;
     border-radius: 3px;
   }
